--- a/src/app/upload/upload.component.html
+++ b/src/app/upload/upload.component.html
@@ -10,7 +10,7 @@
          appDragAndDrop (fileDropped)="updateFilesList($event)"
          (click)="fileInput.click()">
       <input #fileInput id="file" type="file"
-             (change)="filesSelection($event); log($event)" multiple hidden>
+             (change)="filesSelection($event)" multiple hidden>
 
       <ng-container *ngIf="filesPreview.length; else noFilesSelected">
         <div class="selection-preview">
@@ -28,10 +28,29 @@
     </ng-template>
   </div>
 
-  <div class="settings-box">
+  <div class="settings-box" [formGroup]="formGroup">
     <label> Ustawienia </label>
+    <div>
+      <label>transitionTime</label>
+      <input type="number" formControlName="transitionTime"></input>
+    </div>
+
+    <div>
+      <label>wakeUp</label>
+      <input type="text" formControlName="wakeUp"></input>
+    </div>
+
+    <div>
+      <label>sleep</label>
+      <input type="text" formControlName="sleep"></input>
+    </div>
+
+    <div>
+      <label>photoRetentionTime</label>
+      <input type="number" formControlName="photoRetentionTime"></input>
+    </div>
     <div class="settings-footer">
-      <button>Zapisz</button>
+      <button (click)="saveSettings()">Zapisz</button>
     </div>
   </div>
 </div>
