--- a/src/app/upload/upload.component.scss
+++ b/src/app/upload/upload.component.scss
@@ -28,6 +28,11 @@ label, span {
     .uploads-box-label {
       display: flex;
       justify-content: space-between;
+      margin-bottom: 12px;
+
+      button {
+        margin-left: 12px;
+      }
     }
 
     .file-uploader {
